<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_buscar"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_buscar" />
    <item
        android:id="@+id/navigation_social"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_social" />
    <item
        android:id="@+id/navigation_nuevo"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_nuevo" />
    <item
        android:id="@+id/navigation_cuenta"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_cuenta" />
    <item
        android:id="@+id/navigation_configuracion"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_configuracion" />
</menu>
